--- a/client/pom.xml
+++ b/client/pom.xml
@@ -8,7 +8,6 @@
     <artifactId>client</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-
     <dependencies>
 
         <dependency>
@@ -20,7 +19,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <optional>true</optional>
+            <version>1.18.8</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
