--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -8,7 +8,7 @@
         <version>2.1.6.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.spring.wk</groupId>
+    <groupId>com.spring.demo</groupId>
     <artifactId>spring</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>demo</name>
