--- a/starter-spring-demo/src/main/resources/application.properties
+++ b/starter-spring-demo/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 format.datasource.name.list.name=wk
 format.datasource.name.list.account=13426192178
-
+spring.aop.proxy-target-class=true
 
 management.server.port=9999
 management.endpoints.web.exposure.include=*
