--- a/starter-spring-demo/src/main/resources/application.properties
+++ b/starter-spring-demo/src/main/resources/application.properties
@@ -1,8 +1,34 @@
-format.datasource.name.list.name=wk
-format.datasource.name.list.account=13426192178
-spring.aop.proxy-target-class=true
-
-management.server.port=9999
-management.endpoints.web.exposure.include=*
-management.endpoint.health.show-details=always
-management.endpoint.shutdown.enabled=true
+#format.datasource.name.list.name=wk
+#format.datasource.name.list.account=13426192178
+#spring.aop.proxy-target-class=true
+#
+#management.server.port=9999
+#management.endpoints.web.exposure.include=*
+#management.endpoint.health.show-details=always
+#management.endpoint.shutdown.enabled=true
+#
+#
+#
+## Redis数据库索引（默认为0）
+spring.redis.database=0
+## Redis服务器地址
+spring.redis.host=127.0.0.1
+## Redis服务器连接端口
+spring.redis.port=6379
+## Redis服务器连接密码（默认为空）
+spring.redis.password=
+spring.redis.lettuce.pool.max-active=8
+#spring.redis.sentinel.nodes=127.0.0.1
+#spring.redis.cluster.nodes=172.17.202.1:6379,172.17.202.2:6379,172.17.202.3:6379
+spring.redis.lettuce.pool.max-idle=8
+spring.redis.lettuce.pool.min-idle=0
+## 连接池最大连接数（使用负值表示没有限制）
+#spring.redis.pool.max-active=8
+## 连接池最大阻塞等待时间（使用负值表示没有限制）
+#spring.redis.pool.max-wait=-1
+## 连接池中的最大空闲连接
+#spring.redis.pool.max-idle=8
+## 连接池中的最小空闲连接
+#spring.redis.pool.min-idle=0
+## 连接超时时间（毫秒）
+#spring.redis.timeout=0
