--- a/starter-spring-demo/pom.xml
+++ b/starter-spring-demo/pom.xml
@@ -23,6 +23,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+            <version>2.0.2.RELEASE</version>
         </dependency>
 
         <dependency>
@@ -77,6 +78,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
+            <version>2.0.2.RELEASE</version>
         </dependency>
 
 
