--- a/starter-spring-demo/src/main/resources/application.properties
+++ b/starter-spring-demo/src/main/resources/application.properties
@@ -9,19 +9,19 @@
 #
 #
 #
-## Redis数据库索引（默认为0）
-spring.redis.database=0
-## Redis服务器地址
-spring.redis.host=127.0.0.1
-## Redis服务器连接端口
-spring.redis.port=6379
-## Redis服务器连接密码（默认为空）
-spring.redis.password=
-spring.redis.lettuce.pool.max-active=8
-#spring.redis.sentinel.nodes=127.0.0.1
-#spring.redis.cluster.nodes=172.17.202.1:6379,172.17.202.2:6379,172.17.202.3:6379
-spring.redis.lettuce.pool.max-idle=8
-spring.redis.lettuce.pool.min-idle=0
+### Redis数据库索引（默认为0）
+#spring.redis.database=0
+### Redis服务器地址
+#spring.redis.host=127.0.0.1
+### Redis服务器连接端口
+#spring.redis.port=6379
+### Redis服务器连接密码（默认为空）
+#spring.redis.password=
+#spring.redis.lettuce.pool.max-active=8
+##spring.redis.sentinel.nodes=127.0.0.1
+##spring.redis.cluster.nodes=172.17.202.1:6379,172.17.202.2:6379,172.17.202.3:6379
+#spring.redis.lettuce.pool.max-idle=8
+#spring.redis.lettuce.pool.min-idle=0
 ## 连接池最大连接数（使用负值表示没有限制）
 #spring.redis.pool.max-active=8
 ## 连接池最大阻塞等待时间（使用负值表示没有限制）
@@ -32,3 +32,14 @@ spring.redis.lettuce.pool.min-idle=0
 #spring.redis.pool.min-idle=0
 ## 连接超时时间（毫秒）
 #spring.redis.timeout=0
+#debug=false
+#spring.task.execution.thread-name-prefix=task-demo
+#spring.task.execution.pool.allow-core-thread-timeout=true
+#spring.task.execution.pool.core-size=8
+#spring.task.execution.pool.keep-alive=60s
+#spring.task.execution.pool.max-size=20
+#spring.task.execution.pool.queue-capacity=2147483647
+##TASK SCHEDULING（TaskSchedulingProperties）
+#spring.task.scheduling.pool.size=1
+#spring.task.scheduling.thread-name-prefix=scheduling
+spring.main.web-application-type=none
